--- a/signin_sheets/templates/signin_sheets/event_list.html
+++ b/signin_sheets/templates/signin_sheets/event_list.html
@@ -3,7 +3,9 @@
 {% block title %}Your events{% endblock %}
 
 {% block content %}
-    <h1 class='fw3'>Hello, {{ request.user.username }}. Here are your  events:</h1>
+    {% if object_list %}
+        <h1 class='fw3'>Hello, {{ request.user.username }}. Here are your events:</h1>
+    {% endif %}
     {% for event in object_list %}
         <a href="{{ event.get_absolute_url }}" class="link white db mb4 pv2">{{ event.name }}</a>
     {% empty %}
