--- a/signin_sheets/templates/first_run.html
+++ b/signin_sheets/templates/first_run.html
@@ -2,15 +2,12 @@
 
 
 {% block content %}
-<div class="dt center vh-100">
-    <div class="pa4 dtc v-mid">
-        <h1 class='fw3'>Before you can begin, please create an admin account.</h1>
-        <form action='' method='POST'>
-            {% csrf_token %}
-            {{ form.as_p }}
-                <input type='submit' value="Create user" class="fw3 bg-dark-red br2 b--none white pa2 ph4" />
-        </form>
-    </div>
-</div>
+<h1 class='fw3'>Please create admin account.</h1>
+<h2 class='fw3'>This account will be able to see all the participants for your events, so choose a good password and don&rsquo;t share it.</h2>
+    <form action='' method='POST'>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type='submit' value="Create admin user" class="fw3 bg-dark-red br2 b--none white pa2 ph4" />
+    </form>
 
 {% endblock %}
