--- a/signin_sheets/templates/base.html
+++ b/signin_sheets/templates/base.html
@@ -69,13 +69,11 @@
 <body>
 
 <nav class="w-100 fixed pv3 ph4">
-    {% if request.user.is_anonymous %}
-        <a href="/" class="fw4 f6 white link mr3">&#127801; HOME</a>
-    {% else %}
-        <a href="/" class="fw4 f6 white link mr3">&#127801; HOME</a>
-        <a href="{% url 'event-list' %}" class="fw4 f4 white link mr3">My Events</a>
-        <a href="{% url 'event-create' %}" class="fw4 f4 white link mr3">New Event</a>
-        <a href="{% url 'logout' %}" class="fw4 f4 white link mr3">Logout</a>
+    <a href="/" class="fw4 ttu f6 white link mr3"><span class="dark-red dib mr2">&#127801;</span>Home</a>
+    {% if not request.user.is_anonymous %}
+        <a href="{% url 'event-list' %}" class="fw4 ttu f6 white link mr3">My Events</a>
+        <a href="{% url 'event-create' %}" class="fw4 ttu f6 white link mr3">New Event</a>
+        <a href="{% url 'logout' %}" class="fw4 ttu f6 white link mr3">Logout</a>
     {% endif %}
 </nav>
 
